--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="main-link" href="./index.html"
             >Web<span class="studio-name">Studio</span></a
           >
-          <ul class="navigation-list">
+          <ul class="navigation-list list">
             <li class="navigation-list-item">
               <a class="navigation-item active" href="./index.html">Studio</a>
             </li>
@@ -40,7 +40,7 @@
           </ul>
         </nav>
         <address class="contact-information-general">
-          <ul class="contact-information-list">
+          <ul class="contact-information-list list">
             <li class="contact-information">
               <a class="contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -76,7 +76,7 @@
           </button>
 
           <div class="mobile-menu-container">
-            <ul class="mobile-menu-list">
+            <ul class="mobile-menu-list list">
               <li class="mobile-menu-item">
                 <a class="mobile-menu-link active" href="./index.html"
                   >Studio</a
@@ -91,7 +91,7 @@
             </ul>
 
             <address class="mobile-menu-contacts">
-              <ul class="mobile-menu-contacts-list">
+              <ul class="mobile-menu-contacts-list list">
                 <li class="mobile-menu-contacts-item">
                   <a
                     class="tel-link mobile-menu-item"
@@ -106,8 +106,8 @@
                 </li>
               </ul>
             </address>
-<!--
-            <ul class="footer-social-media-list menu-social">
+
+            <ul class="footer-social-media-list menu-social list">
               <li class="footer-social-media-item">
                 <a
                   href=""
@@ -152,7 +152,7 @@
                     <use href="./images/icons.svg#icon-linkedin-1"></use></svg
                 ></a>
               </li>
-            </ul> -->
+            </ul> 
           </div>
         </div>
       </div>
@@ -174,7 +174,7 @@
         <div class="container about-us-container">
           <h2 class="visually-hidden">About Us</h2>
 
-          <ul class="about-us-list">
+          <ul class="about-us-list list">
             <li class="about-us-item">
               <div class="about-us-icon">
                 <svg width="64" height="64">
@@ -231,7 +231,7 @@
       <section class="section products-section">
         <div class="container products-container">
           <h2 class="products-title">What are we doing</h2>
-          <ul class="products-list">
+          <ul class="products-list list">
             <li class="products-item">
               <img
                 srcset="
@@ -277,7 +277,7 @@
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
 
-          <ul class="team-list">
+          <ul class="team-list list">
             <li class="team-member-card">
               <img
                 srcset="
@@ -293,7 +293,7 @@
                 <h3 class="team-member-name">Mark Guerrero</h3>
                 <p class="team-member-position">Product Designer</p>
 
-                <ul class="team-social-media-list">
+                <ul class="team-social-media-list list">
                   <li class="team-social-media-item">
                     <a
                       href=""
@@ -358,7 +358,7 @@
                 <h3 class="team-member-name">Tom Ford</h3>
                 <p class="team-member-position">Frontend Developer</p>
 
-                <ul class="team-social-media-list">
+                <ul class="team-social-media-list list">
                   <li class="team-social-media-item">
                     <a
                       href=""
@@ -422,7 +422,7 @@
                 <h3 class="team-member-name">Camila Garcia</h3>
                 <p class="team-member-position">Marketing</p>
 
-                <ul class="team-social-media-list">
+                <ul class="team-social-media-list list">
                   <li class="team-social-media-item">
                     <a
                       href=""
@@ -486,7 +486,7 @@
                 <h3 class="team-member-name">Daniel Wilson</h3>
                 <p class="team-member-position">UI Designer</p>
 
-                <ul class="team-social-media-list">
+                <ul class="team-social-media-list list">
                   <li class="team-social-media-item">
                     <a
                       href=""
@@ -543,7 +543,7 @@
       <section class="section customers-section">
         <div class="container customer-container">
           <h2 class="customers-title">Customers</h2>
-          <ul class="customers-list">
+          <ul class="customers-list list">
             <li class="customers-item">
               <a
                 href=""
@@ -633,7 +633,7 @@
 
         <div class="footer-social-media">
           <p class="footer-social-media-text">Social media</p>
-          <ul class="footer-social-media-list">
+          <ul class="footer-social-media-list list">
             <li class="footer-social-media-item">
               <a
                 href=""
