--- a/portfolio.html
+++ b/portfolio.html
@@ -25,29 +25,36 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a href="./index.html" class="main-link link"
+          <a class="main-link" href="./index.html"
             >Web<span class="studio-name">Studio</span></a
           >
-          <ul class="list navigation-list">
-            <li><a href="./index.html" class="menu-list link">Studio</a></li>
-            <li>
-              <a href="./portfolio.html" class="menu-list active link">Portfolio</a>
+          <ul class="navigation-list list">
+            <li class="navigation-list-item">
+              <a class="navigation-item active" href="./index.html">Studio</a>
             </li>
-            <li><a href="" class="menu-list link">Contacts</a></li>
+            <li class="navigation-list-item">
+              <a class="navigation-item" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-item" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
         <address class="contact-information-general">
-          <ul class="list contact-list">
+          <ul class="contact-information-list list">
             <li class="contact-information">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              <a class="contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="contact-information">
-              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+              <a class="contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
-      </div>
-    </header>
+
 
     <main>
       <section class="section-portfolio">
