--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-
+<ul class="mobile-menu-list list"></ul>
           <div class="mobile-menu-container">
-            <ul class="mobile-menu-list list">
+            
               <li class="mobile-menu-item">
                 <a class="mobile-menu-link active" href="./index.html"
                   >Studio</a
